--- a/data/src/main/resources/templates/index.html
+++ b/data/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>ReactJS + Spring Data REST</title>
     <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" type="text/css" href="bundle.css">
+    <link rel="stylesheet" type="text/css" href="/bundle.css">
 </head>
 <body>
 
